--- a/biblio.bib
+++ b/biblio.bib
@@ -1,7 +1,7 @@
 @inproceedings{rafael2014community,
   title={Community Resources for Enabling Research in Distributed Scientific Workflows},
   author={Ferreira da Silva, Rafael and Chen, Weiwei and Juve, Gideon and Vahi, Karan and Deelman, Ewa},
-  booktitle={submitted to The 10th IEEE International Conference on e-Science}, 
+  booktitle={the 10th IEEE International Conference on e-Science}, 
   year={2014},
 }
 
