Updates to the Abstract and Introduction sections.

--- a/biblio.bib
+++ b/biblio.bib
@@ -38,7 +38,7 @@
 
 @inproceedings{da2013toward,
   title={Toward fine-grained online task characteristics estimation in scientific workflows},
-  author={da Silva, Rafael Ferreira and Juve, Gideon and Deelman, Ewa and Glatard, Tristan and Desprez, Fr{\'e}d{\'e}ric and Thain, Douglas and Tovar, Benjam{\'\i}n and Livny, Miron},
+  author={Ferreira da Silva, Rafael and Juve, Gideon and Deelman, Ewa and Glatard, Tristan and Desprez, Fr{\'e}d{\'e}ric and Thain, Douglas and Tovar, Benjam{\'\i}n and Livny, Miron},
   booktitle={Proceedings of the 8th Workshop on Workflows in Support of Large-Scale Science},
   pages={58--67},
   year={2013},
@@ -215,7 +215,17 @@ year={2010},
 pages={612-617}, 
 }
 
-@article{Khajevand2012,author = {Vahid Khajevand and Hossein Pedram and Mostafa Zandieh},title = {Provisioning-Based Resource Management for Effective Workflow Scheduling on Utility Grids},journal ={Cluster Computing and the Grid, IEEE International Symposium on},volume = {0},isbn = {978-0-7695-4691-9},year = {2012},pages = {719-720},publisher = {IEEE Computer Society},address = {Los Alamitos, CA, USA},},
+@article{Khajevand2012,
+author = {Vahid Khajevand and Hossein Pedram and Mostafa Zandieh},
+title = {Provisioning-Based Resource Management for Effective Workflow Scheduling on Utility Grids},
+journal ={Cluster Computing and the Grid, IEEE International Symposium on},
+volume = {0},
+isbn = {978-0-7695-4691-9},
+year = {2012},
+pages = {719-720},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+},
 
 @INPROCEEDINGS{Pop2008, 
 author={Pop, F. and Dobre, C. and Cristea, V.}, 
@@ -316,7 +326,18 @@ author = "Nithiapidary Muthuvelu and Christian Vecchiola and Ian Chai and Eswara
 
 
 
-@article{Ying2009,author = {Huang Ying and Guo Mingqiang and Luo Xiangang and Liu Yong},title = {A Webgis Load-Balancing Algorithm Based on Collaborative Task Clustering},journal ={Environmental Science and Information Application Technology, International Conference on},volume = {3},isbn = {978-0-7695-3682-8},year = {2009},pages = {736-739},publisher = {IEEE Computer Society},address = {Los Alamitos, CA, USA},},
+@article{Ying2009,
+author = {Huang Ying and Guo Mingqiang and Luo Xiangang and Liu Yong},
+title = {A Webgis Load-Balancing Algorithm Based on Collaborative Task Clustering},
+journal ={Environmental Science and Information Application Technology, International Conference on},
+volume = {3},
+isbn = {978-0-7695-3682-8},
+year = {2009},
+pages = {736-739},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+}
+,
 
 @INPROCEEDINGS{Meinl2008, 
 author={Meinl, T.}, 
@@ -414,11 +435,11 @@ pages={709-710},
 },
 
 @INPROCEEDINGS{Silva2012, 
-author={Ferreira da Silva, R. and Glatard, T. and Desprez, F.}, 
-booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12) }, title={Self-Healing of Operational Workflow Incidents on Distributed Computing Infrastructures}, 
-year={2012}, 
-pages={318-325}, 
-
+	author={Ferreira da Silva, R. and Glatard, T. and Desprez, F.}, 
+	booktitle={12th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGrid '12) }, 
+	title={Self-Healing of Operational Workflow Incidents on Distributed Computing Infrastructures}, 
+	year={2012}, 
+	pages={318-325}, 
 },
 
 
@@ -906,7 +927,17 @@ year={30 2010-Dec. 3},
 pages={351-359}, 
 },
 
-@article{Celaya2010,author = {Javier Celaya and Loris Marchal},title = {A Fair Decentralized Scheduler for Bag-of-Tasks Applications on Desktop Grids},journal ={Cluster Computing and the Grid, IEEE International Symposium on},volume = {0},isbn = {978-0-7695-4039-9},year = {2010},pages = {538-541},publisher = {IEEE Computer Society},address = {Los Alamitos, CA, USA},},
+@article{Celaya2010,
+author = {Javier Celaya and Loris Marchal},
+title = {A Fair Decentralized Scheduler for Bag-of-Tasks Applications on Desktop Grids},
+journal ={Cluster Computing and the Grid, IEEE International Symposium on},
+volume = {0},
+isbn = {978-0-7695-4039-9},
+year = {2010},
+pages = {538-541},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+},
 
 @INPROCEEDINGS{Chen2013a,
   author = {Chen, Weiwei and Deelman, Ewa and Sakellariou, Rizos},
@@ -1024,7 +1055,8 @@ pages={167-},
 },
 
 @misc{Matlab,
-	author={Matlab Interactive distribution fitting},	title={Matlab Interactive Distribution Fitting},
+	author={Matlab Interactive distribution fitting},
+	title={Matlab Interactive Distribution Fitting},
 	url={http://www.mathworks.com/help/toolbox/stats/dfittool.html}
 	howpublished={\url{http://www.mathworks.com/help/toolbox/stats/dfittool.html}}
 },
@@ -2987,7 +3019,8 @@ pages={23-30},
     volume = {3},
     number = {3--4},
     year = {2005},
-},
+}
+
 @INPROCEEDINGS{Chen2013b,
 	author={Chen, Weiwei and Ferreira da Silva, Rafael and Deelman, Ewa and Sakellariou, Rizos},
 	booktitle={2013 IEEE 9th International Conference on eScience},
@@ -3030,4 +3063,42 @@ pages={23-30},
 	title = {{SIPHT}},
 	howpublished = {\url{http://pegasus.isi.edu/applications/sipht}},
 	key = {{SIPHT}},
+}
+
+@incollection{FerreiradaSilva-CGWS-2013,
+	year = {2013},
+	booktitle = {Euro-Par 2012: Parallel Processing Workshops},
+	volume = {7640},
+	series = {Lecture Notes in Computer Science},
+	doi = {10.1007/978-3-642-36949-0\_10},
+	title = {A Science-Gateway Workload Archive to Study Pilot Jobs, User Activity, Bag of Tasks, Task Sub-steps, and Workflow Executions},
+	author = {Ferreira da Silva, Rafael and Glatard, Tristan},
+	pages = {79--88}
+}
+
+@INPROCEEDINGS{5071878,
+	author={Yang Zhang and Mandal, A. and Koelbel, C. and Cooper, K.},
+	booktitle={Cluster Computing and the Grid, 2009. CCGRID '09. 9th IEEE/ACM International Symposium on},
+	title={Combined Fault Tolerance and Scheduling Techniques for Workflow Applications on Computational Grids},
+	year={2009},
+	pages={244-251},
+	doi={10.1109/CCGRID.2009.59},
+}
+
+@INPROCEEDINGS{5671856,
+	author={Montagnat, J. and Glatard, T. and Reimert, D. and Maheshwari, K. and Caron, E. and Desprez, F.},
+	booktitle={Workflows in Support of Large-Scale Science (WORKS), 2010 5th Workshop on},
+	title={Workflow-based comparison of two Distributed Computing Infrastructures},
+	year={2010},
+	pages={1-10},
+	doi={10.1109/WORKS.2010.5671856},
+}
+
+@INPROCEEDINGS{4534303,
+	author={Kandaswamy, G. and Mandal, A. and Reed, D.A.},
+	booktitle={Cluster Computing and the Grid, 2008. CCGRID '08. 8th IEEE International Symposium on},
+	title={Fault Tolerance and Recovery of Scientific Workflows on Computational Grids},
+	year={2008},
+	pages={777-782},
+	doi={10.1109/CCGRID.2008.79},
 }
