--- a/ftc.tex
+++ b/ftc.tex
@@ -34,10 +34,10 @@
 
 
 \author{Weiwei~Chen,~\IEEEmembership{Student Member,~IEEE,}
-        Rafael~Ferreira~da~Silva,~\IEEEmembership{Member,~IEEE,}
+        Rafael~Ferreira~da~Silva,
 	Ewa~Deelman, ~\IEEEmembership{Member, ~IEEE,}
         and~Thomas~Fahringer,~\IEEEmembership{Member,~IEEE}% <-this % stops a space
-\IEEEcompsocitemizethanks{\IEEEcompsocthanksitem W. Chen, R. Silva and E. Deelman are with the Information Sciences Institute, University of Southern California, Marina del Rey, CA, USA.\protect\\
+\IEEEcompsocitemizethanks{\IEEEcompsocthanksitem W. Chen, R. Ferreira da Silva and E. Deelman are with the Information Sciences Institute, University of Southern California, Marina del Rey, CA, USA.\protect\\
 % note need leading \protect in front of \\ to get a newline within \thanks as
 % \\ is fragile and will error, could use \hfil\break instead.
 
@@ -112,9 +112,9 @@ model these performance issues. We further propose 3 fault-tolerant static clust
 performance of executing workflows in faulty execution environments. Experimental results show that failures can have significant 
 impact on executions where task clustering policies are not fault-tolerant, and that our approaches yield makespan
 improvements in such scenario. In addition, we propose a dynamic task clustering strategy, which aims at optimizing the 
-workflow makespan by dynamically adjusting the clustering granularity when failures arise. A trace-based simulation 
+workflow's makespan by dynamically adjusting the clustering granularity when failures arise. A trace-based simulation 
 of 5 real scientific workflows shows that our dynamic method is able to adapt from unexpected behaviors out of the model,
-and yields better makespan when compared to the static methods.
+and yields better makespan when compared to static methods.
 
 \end{abstract}
 % IEEEtran.cls defaults to using nonbold math in the Abstract.
@@ -161,35 +161,88 @@ scientific workflows, fault tolerance, parameter estimation, failure, machine le
 
 
 
-
+%
+% Section: introduction
+%
 \section*{Introduction}
-\IEEEPARstart{S}{cientific} workflows can be composed of many fine computational granularity tasks and the runtime of these tasks may be even shorter than the system overhead. System overhead is the period time during which miscellaneous work other than the userâ€™s computation is performed. Task clustering \cite{Chen2013a, Singh2008, Chen2012, Maheshwari2012, Ferreira-granularity-2013, Integration2012} is a technique that merges several short tasks into a single job such that the job runtime is increased and the overall system overhead is decreased. 
-Task clustering has been proven to be an effective method to reduce execution overhead and increase the computational granularity of workflow tasks executing on distributed resources \cite{Ying2009, Singh2008, Chen2013a, Chen2012, Ferreira-granularity-2013}.
-However, existing clustering strategies ignore or underestimate the impact of the occurrence of failures on system behavior, despite the current and increasing importance of failures in large-scale distributed systems, such as Grids \cite{Bresnahan2011, Deelman2004, Rubing2005}, Clouds \cite{Deelman2008, Berriman2010, Bresnahan2011} and dedicated clusters. Many researchers \cite{Zhang2004, Tang1990, Schroeder2006, Sahoo2004} have emphasized the importance of fault tolerant design and indicated that the failure rates in modern distributed systems are significant. Among all possible failures, we focus on transient failures because they are expected to be more prevalent than permanent failures \cite{Zhang2004}. For example, denser integration of semiconductor circuits and lower operating voltage levels may increase the likelihood of bit-flips when circuits are bombarded by cosmic rays and other particles \cite{Zhang2004}. 
 
-In task clustering, a clustered job consists of multiple tasks. A task is marked as failed (task failure) if it is terminated by unexpected events during the computation of this task. If a task within a job fails, this job has a job failure, even though other tasks within this job do not necessarily fail. 
-In a faulty execution environment, there are several options for reducing the influence of workflow failures. First, one can simply retry the entire job when its computation is not successful as in the Pegasus \cite{Deelman2004}, ASKALON \cite{fahringer2007askalon} and Chemomentum \cite{schuller2008chemomentum}. However, some of the tasks within the job may have completed successfully and it could be a waste of time and resources to retry all of the tasks. Second, the application process can be periodically checkpointed such that when a failure occurs, the amount of work to be retried is limited. However, the overheads of checkpointing can limit its benefits \cite{Zhang2004}. Third, tasks can be replicated to different computational nodes to avoid failures that are related to one specific worker node \cite{Plankensteiner2009}. However, inappropriate clustering (and replication) parameters may cause severe performance degradation if they create long-running clustered jobs. As we will show, a long-running job that consists of many tasks has a higher job failure rate even when the inter-arrival time of failures is long. 
+\IEEEPARstart{S}{cientific} workflows can be composed of many fine computational granularity 
+tasks in which the runtime may be shorter than the system overhead. System overhead is the 
+period of time during which miscellaneous work other than the user'€™s computation is performed. 
+Task clustering~\cite{Chen2013a, Singh2008, Chen2012, Maheshwari2012, Ferreira-granularity-2013, Integration2012} 
+is a technique that merges several short tasks into a single job such that the job runtime is increased 
+and the overall system overhead is decreased. Task clustering has been proven to be an effective 
+method to address execution overheads and increase the computational granularity of workflow tasks 
+executing on distributed resources~\cite{Ying2009, Singh2008, Chen2013a, Chen2012, Ferreira-granularity-2013}.
+However, existing clustering strategies ignore or underestimate the impact of failures on the system, 
+despite the current and increasing importance of failures in large-scale distributed 
+systems~\cite{Zhang2004, Tang1990, Schroeder2006, Sahoo2004}, such as 
+grids~\cite{Bresnahan2011, Deelman2004, Rubing2005, FerreiradaSilva-CGWS-2013} and 
+clouds~\cite{Deelman2008, Berriman2010, Bresnahan2011}. 
+In this work, we particularly focus on transient failures since they are expected to be more prevalent 
+than permanent failures~\cite{Zhang2004}. 
+%For instance, denser integration of semiconductor circuits and lower operating voltage levels may increase the likelihood of bit-flips when circuits are bombarded by cosmic rays and other particles~\cite{Zhang2004}. 
 
-In this paper we view the sequence of failure events as a stochastic process and study the distribution of its inter-arrival times, i.e. the time between failures. Our work is based on an assumption that the distribution parameter of the inter-arrival time is a function of the \emph{type of task}. Tasks of the same type have the same computational program (executable file). In the five workflows we examine in this paper, tasks at the same horizontal workflow level (defined as the longest distance from the entry task of the workflow) of the workflows have the same type. 
-The characteristics of tasks such as the task runtime, memory peak, and disk usage are highly related to the task type \cite{da2013toward, Juve2013}.
-Samak \cite{Samak2011} et al. have analyzed 1,329 real workflow executions across six distinct applications and concluded that the type of a task is among the most significant factors that impacted failures. Our work can be extended to consider other patterns on failures~\cite{Sahoo2004}. 
+A clustered job consists of multiple tasks. If a task within a clustered job fails (i.e. terminated 
+by unexpected events during its computation), the job is marked as failed, even though tasks 
+within the same job have successfully completed their execution. Several techniques have
+been developed to cope with the negative impact of job failures on the execution of scientific
+workflows. The most common technique is to resubmit the failed job~\cite{5071878, 5671856, 4534303}. 
+However, retrying a clustered job can be expensive since completed tasks within the job should
+be recomputed, i.e. resource cycles are wasted. In addition, there is no guarantee that the 
+task will recompute successfully.  As an alternative, jobs can be replicated to avoid failures 
+that are related to one specific worker node~\cite{Plankensteiner2009}. However, task replication
+may also waste resources, in particular for long-running jobs. To reduce resource waste, job
+executions can be periodically checkpointed to limit the amount of work to be retried. However, 
+the overhead produced for performing checkpointing can limit its benefits~\cite{Zhang2004}. 
 
-We propose two horizontal clustering methods and one vertical clustering methods to improve the existing clustering techniques in a faulty execution environment. The first horizontal clustering method retries the failed tasks within a job. The second horizontal solution dynamically \emph{adjusts the granularity or clustering size} (number of tasks in a job) according to the estimated inter-arrival time of task failures. The vertical clustering method reduces the clustering size by half in each job retry. 
-%We further analyze the runtime performance of combining horizontal methods and vertical methods in different ways. 
-In this paper, we assume a task-level monitoring service is available. A task-level monitor tells which tasks in a clustered job fail or succeed, while a job-level monitor only tells whether this job failed or not. The job-level fault tolerant clustering has been discussed in our prior work \cite{Chen2012}. To the best of our knowledge, this is the first work that joins the failure modeling and the task reclustering technique to achieve better runtime performance for task clustering methods in a faulty execution environment. 
+%In a faulty execution environment, there are several options for reducing the influence of workflow failures. First, one can simply retry the entire job when its computation is not successful as in the Pegasus \cite{Deelman2004}, ASKALON \cite{fahringer2007askalon} and Chemomentum \cite{schuller2008chemomentum}. However, some of the tasks within the job may have completed successfully and it could be a waste of time and resources to retry all of the tasks. Second, the application process can be periodically checkpointed such that when a failure occurs, the amount of work to be retried is limited. However, the overheads of checkpointing can limit its benefits \cite{Zhang2004}. Third, tasks can be replicated to different computational nodes to avoid failures that are related to one specific worker node \cite{Plankensteiner2009}. However, inappropriate clustering (and replication) parameters may cause severe performance degradation if they create long-running clustered jobs. As we will show, a long-running job that consists of many tasks has a higher job failure rate even when the inter-arrival time of failures is long. 
+
+%In this work, we view the sequence of failure events as a stochastic process and study the distribution of its inter-arrival times, i.e. the time between failures. Our work is based on an assumption that the distribution parameter of the inter-arrival time is a function of the \emph{type of task}. Tasks of the same type have the same computational program (executable file). In the five workflows we examine in this paper, tasks at the same horizontal workflow level (defined as the longest distance from the entry task of the workflow) of the workflows have the same type. The characteristics of tasks such as the task runtime, memory peak, and disk usage are highly related to the task type \cite{da2013toward, Juve2013}. Samak \cite{Samak2011} et al. have analyzed 1,329 real workflow executions across six distinct applications and concluded that the type of a task is among the most significant factors that impacted failures. Our work can be extended to consider other patterns on failures~\cite{Sahoo2004}. 
+
+In this work, we propose three fault-tolerant task clustering methods to improve existing 
+task clustering techniques in a faulty distributed execution environment. The first method 
+retries failed tasks within a job by extracting them into a new job. The second method 
+dynamically adjusts the \emph{granularity} or \emph{clustering size} (number of tasks in 
+a job) according to the estimated inter-arrival time of task failures. The third method partitions 
+the clustered jobs into finer jobs (i.e. reduces the job \emph{granularity}) and retries them.
+
+%In this paper, we assume a task-level monitoring service is available. A task-level monitor tells which tasks in a clustered job fail or succeed, while a job-level monitor only tells whether this job failed or not. The job-level fault tolerant clustering has been discussed in our prior work \cite{Chen2012}. To the best of our knowledge, this is the first work that joins the failure modeling and the task reclustering technique to achieve better runtime performance for task clustering methods in a faulty execution environment. 
+
+We then evaluate these methods using a task transient failure model based on a parameter 
+learning process that estimates the distribution of the task runtimes, the system overheads, 
+and the inter-arrival time of failures.
+%Compared to our prior work in \cite{Chen2012}, we add a parameter learning process to estimate the distribution of the task runtime, the system overhead, and the inter-arrival time of failures. 
+The process uses the Maximum Likelihood Estimation (MLE) based on \emph{prior} and 
+\emph{posterior} knowledge to build the estimates. The prior knowledge about the 
+parameters is modeled as a distribution with known parameters. The posterior knowledge 
+about the task execution is also modeled as a distribution with a known \emph{shape} parameter 
+and an unknown \emph{scale} parameter. The shape parameter affects the shape of a distribution, 
+while the scale parameter affects the stretching or shrinking of a distribution. 
+
+%Both parameters control the characteristics of a distribution. The distribution of the prior and the posterior knowledge are in the same family if the likelihood distribution follows some specific distributions. These functions are called \emph{conjugate distributions}. For example, if the likelihood is a Weibull distribution and we model prior knowledge as an Inverse-Gamma distribution, then the posterior is also an Inverse-Gamma distribution. This simplifies the estimation of parameters and integrates the prior knowledge and posterior knowledge gracefully. More specifically, we define the parameter learning process with only prior knowledge as the static estimation. The process with both prior knowledge and posterior knowledge is called the dynamic estimation since we update the MLE based on the information collected during the execution.  
+
+The two first fault-tolerant task clustering methods were introduced and evaluated in~\cite{Chen2012} 
+on two real scientific workflows. In this work, we complement this previous work by studying 
+(\emph{i}) the performance gain of using fault-tolerant task clustering methods over an 
+existing task clustering technique on a larger set of workflows (five widely used scientific 
+applications); (\emph{ii}) the performance impact of the variance of the distribution of the 
+task runtime, the system overheads, and the inter-arrival time of failures on the workflow's 
+makespan; and (\emph{iii}) the performance impact of dynamic and static failure estimations 
+with variation of the inter-arrival time of failures on the workflow's execution.
+
+The rest of this manuscript is organized as follows. Section~\ref{sec:related} gives 
+an overview of the related work. Section~\ref{sec:models} presents our workflow and 
+task failure models. Section~\ref{sec:clustering} details our fault-tolerant clustering 
+methods. Section~\ref{sec:experiments} reports experiments and results, and the 
+manuscript closes with a discussion and conclusions. 
 
 
 
-%A node failure only occurs to some specific execution nodes. 
-Compared to our prior work in \cite{Chen2012}, we add a parameter learning process to estimate the distribution of the task runtime, the system overhead, and the inter-arrival time of failures. We adopt an approach of prior and posterior knowledge based Maximum Likelihood Estimation (MLE) that has been widely used in machine learning. Prior knowledge about the parameters is modeled as a distribution with known parameters. Posterior knowledge about the task execution is also modeled as a distribution with a known \emph{shape parameter} and an unknown \emph{scale parameter}. The shape parameter affects the shape of a distribution and the scale parameter affects the stretching or shrinking of a distribution. Both parameters control the characteristics of a distribution. The distribution of the prior and the posterior knowledge are in the same family if the likelihood distribution follows some specific distributions. These functions are called \emph{conjugate distributions}. For example, if the likelihood is a Weibull distribution and we model prior knowledge as an Inverse-Gamma distribution, then the posterior is also an Inverse-Gamma distribution. This simplifies the estimation of parameters and integrates the prior knowledge and posterior knowledge gracefully. More specifically, we define the parameter learning process with only prior knowledge as the static estimation. The process with both prior knowledge and posterior knowledge is called the dynamic estimation since we update the MLE based on the information collected during the execution.  
-
-The two horizontal clustering methods were introduced and evaluated in \cite{Chen2012} on two workflows. In this paper, we complement this previous paper by studying (\emph{i}) the performance gain of using two horizontal clustering methods and one vertical clustering method over an existing task clustering technique on a larger set of workflows (five widely used scientific applications); (\emph{ii}) the performance impact of the variance of the distribution of the task runtime, the system overheads, and the inter-arrival time of failures; (\emph{iii}) the performance difference of dynamic estimation and static estimation with variation of the inter-arrival time of failures.  
-
-The rest of this paper is organized as follows. Section \ref{sec:related} gives an overview of the related work. Section \ref{sec:models} presents our workflow and failure models. Section \ref{sec:clustering} details our fault tolerant clustering methods. Section \ref{sec:experiments} reports experiments and results, and the paper closes with a discussion and conclusions. 
-
-
-
-\section{RELATED WORK}
+%
+% Section: Related Work
+%
+\section{Related Work}
 \label{sec:related}
 
 Failure analysis and modeling \cite{Tang1990} presents system characteristics such as error and failure distribution and hazard rates. Schroeder et al. \cite{Schroeder2006} has studied the statistics of the data, including the root cause of failures, the mean time between failures, and the mean time to repair. Sahoo et al. \cite{Sahoo2004} analyzed the empirical and statistical properties of system errors and failures from a network of heterogeneous servers running a diverse workload. Oppenheimer et al. \cite{Oppenheimer2002} analyzed the causes of failures from three large-scale Internet services and the effectiveness of various techniques for preventing and mitigating service failure. McConnel \cite{McConnel} analyzed the transient errors in computer systems and showed that transient errors follow a Weibull distribution. In \cite{Sun2003, Iosup2008}, Weibull distribution is one of the best fit for the workflow traces they used.  Based on these work, we measure the inter-arrival time of failures in a workflow and then provide methods to improve task clustering.  
@@ -901,7 +954,8 @@ Furthermore, we assume that the inter-arrival time of transient failures is a fu
 \fi
 
 
-This work is supported by NFS under grant number IIS-0905032. We thank Gideon Juve, Karan Vahi, Mats Rynge and Rajiv Mayani for their help. Traces are collected from experiments that were run on FutureGrid that is supported by NSF FutureGrid 0910812. 
+This work is supported by NFS under grant number IIS-0905032. We thank Gideon Juve, Karan Vahi, Mats Rynge and Rajiv Mayani for their help. Traces are collected from experiments that were run on FutureGrid that is supported by NSF FutureGrid 0910812. 
+
 
 
 
